--- a/board.html
+++ b/board.html
@@ -35,7 +35,7 @@
             <span class="title-board">To do</span>
             <img class="plus-border-board" src="./assets/img/plus-button-board.png">
         </div>
-        <div class="no-tasks-board">No tasks To do</div>
+        <div id="toDo" class="tasks-board"></div>
     </div>
 
     <div class="card-board">
