--- a/add_task.html
+++ b/add_task.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./include.js"></script>
+    <script src="./js/signUp.js"></script>
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
     <script src="./js/add_task.js"></script>
@@ -92,7 +93,7 @@
             </div>
             <div class="clearCreateButtonsContainer">
                 <button class="clearButton" onclick="clearForm()">Clear <img src="./assets/img/iconoir_cancel.png" alt=""></button>
-                <button class="createButton" onclick="createTask()">Create Task <img src="./assets/img/check.png" alt=""></button>
+                <button class="createButton" onclick="createTask2()">Create Task <img src="./assets/img/check.png" alt=""></button>
             </div>
         </form>
 
