edited addTask Page

--- a/add_task.html
+++ b/add_task.html
@@ -72,7 +72,7 @@
                         <span>Category</span>
                         <p class="redText">*</p>
                     </div>
-                    <select class="categoryPicker" id="category" name="category">
+                    <select class="categoryPicker fontSize20px" id="category" name="category">
                         <option value="">Select task category</option>
                         <option value="To-Do">To-Do</option>
                         <option value="In Progress">In Progress</option>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="subtaskContainer">
                     <span>Subtasks</span>
-                    <input class="subtaskPicker" type="text" placeholder="Add new Subtask">
+                    <input class="subtaskPicker fontSize20px" type="text" placeholder="Add new Subtask">
                 </div>
             </div>
             <div class="fieldRequiredText">
