--- a/contacts.html
+++ b/contacts.html
@@ -62,11 +62,11 @@
                                             <form id="kontaktForm">
                                             <div class="Name">
                                                 <input required class="inputfieldAddContact" id="neuerKontaktName" type="text" placeholder="Name">
-                                                <img src="assets/img/person.png" class="inputfield-icon">
+                                                <img src="assets/img/person.png" class="inputfield-icon width22">
                                             </div>
                                             <div class="Name">
                                                 <input required class="inputfieldAddContact" id="neuerKontaktEmail" type="email" placeholder="Email">
-                                                <img src="assets/img/mail.png" class="inputfield-icon">
+                                                <img src="assets/img/mail.png" class="inputfield-icon width22">
                                             </div>
                                             <div class="Name">
                                                 <input required class="inputfieldAddContact" id="neuerKontaktNummer" type="number" placeholder="Phone">
