--- a/contacts.html
+++ b/contacts.html
@@ -32,6 +32,10 @@
 
         <div class="rightContainer">
             <img class="contacts-BetterWaT" src="assets/img/contacts-BetterWaT.png" alt="">  
+
+            <div class="contactAddedSuccesfully">
+                <img src="assets/img/addedContadctSuccesfully.png">
+            </div>
             
             <div id="zielbereich"></div>
         </div>
