--- a/contacts.html
+++ b/contacts.html
@@ -31,9 +31,9 @@
         
 
         <div class="rightContainer">
-            <img class="contacts-BetterWaT" src="assets/img/contacts-BetterWaT.png" alt="">  
+            <img class="betterWaT show" id="BetterWaTId" src="assets/img/contacts-BetterWaT.png" alt="">  
 
-            <div class="contactAddedSuccesfully">
+            <div id="contactAddedSuccesfullyId" class="contactAddedSuccesfully">
                 <img src="assets/img/addedContadctSuccesfully.png">
             </div>
             
