--- a/add_task.html
+++ b/add_task.html
@@ -17,7 +17,7 @@
     <title>Join</title>
 </head>
 
-<body onload="includeHTML()">
+<body onload="includeHTML(); loadTasks()">
 
     <div w3-include-html="./assets/templates/header.html"></div>
 
