Sign up in Login verlinkt

--- a/Login.html
+++ b/Login.html
@@ -24,7 +24,12 @@
 
         <div class="notAJoinUser">
             <div class="notAJoinUserText">Not a Join user?</div>
-            <button class="notAJoinUserButton">Sign up</button>
+            <button class="notAJoinUserButton">
+                <a href="Signup.html" style="    
+                color: white;
+                text-decoration: none;
+                font-weight: bolder;
+                cursor: pointer;">Sign up</a></button>
         </div>
     </div>
 
