--- a/Signup.html
+++ b/Signup.html
@@ -32,7 +32,7 @@
     <div class="LogInField">
         <div class="displayFLex titleLogIn">
             <img class="signUpLogo" src="assets/img/Signup.png" alt="">
-            <a href="#" class="arrow-left">
+            <a href="Login.html" class="arrow-left">
                 <img src="assets/img/arrow-left-line.png" alt="">
             </a>
         </div>
