--- a/Signup.html
+++ b/Signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/signUp.css">
     <script src="js/signUp.js"></script>
     <script src="js/register.js"></script>
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
 <body onload="init()">
 <div class="centerAll">
