--- a/board.html
+++ b/board.html
@@ -13,6 +13,7 @@
     <script src="./js/templates.js"></script>
     <script src="./js/add_task.js"></script>
     <script src="./js/board.js"></script>
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
 
 <body id="body-board" onload="includeHTML(); initBoard()">
