--- a/Login.html
+++ b/Login.html
@@ -9,6 +9,7 @@
     <script src="js/signUp.js"></script>
     <script src="js/register.js"></script>
     <script src="js/logIn.js"></script>
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
 <body>
 <div class="centerAll">
