--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
     <script src="./js/templates.js"></script>
     <script src="js/contacts.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
+    <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
 <body onload="includeHTML(); init()">
 
