--- a/add_task.html
+++ b/add_task.html
@@ -96,9 +96,9 @@
                 </div>
             </div>
             <div class="clearCreateButtonsContainer">
-                <button class="clearButton" onclick="clearForm()">Clear <img src="./assets/img/iconoir_cancel.png"
+                <button type="button" class="clearButton" onclick="clearForm()">Clear <img src="./assets/img/iconoir_cancel.png"
                         alt=""></button>
-                <button class="createButton" onclick="createTask()">Create Task <img src="./assets/img/check.png"
+                <button type="submit" class="createButton" onclick="createTask()">Create Task <img src="./assets/img/check.png"
                         alt=""></button>
             </div>
         </form>
