--- a/add_task.html
+++ b/add_task.html
@@ -26,19 +26,19 @@
             <h1 class="headlineAddTask">Add Task</h1>
         </div>
 
-        <form id="addTaskForm">
+        <form id="addTaskForm" onsubmit="return false">
             <div class="leftAddTaskContainer fontSize20px">
                 <div class="titleContainer">
                     <div class="flex-start">
                         <span>Title</span>
                         <p class="redText">*</p>
                     </div>
-                    <input required class="titleInputAddTask fontSize20px" type="text" placeholder="Enter a title">
+                    <input required class="titleInputAddTask fontSize20px" id="titleInput" type="text" placeholder="Enter a title">
                 </div>
 
                 <div class="descriptionContainer">
                     <span>Description</span>
-                    <textarea class="descriptionTextArea fontSize20px" name="" id="" cols="30" rows="10"
+                    <textarea class="descriptionTextArea fontSize20px" name="" id="description" cols="30" rows="10"
                         placeholder="Enter a Description"></textarea>
                 </div>
 
@@ -58,7 +58,7 @@
                         <span>Due Date</span>
                         <p class="redText">*</p>
                     </div>
-                    <input required class="dateInput fontSize20px" type="date" id="date">
+                    <input required class="dateInput fontSize20px" id="dateInputPicker" type="date" id="date">
                 </div>
                 <div class="prioPickerContainer">
                     <span>Prio</span>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="subtaskContainer">
                     <span>Subtasks</span>
-                    <input class="subtaskPicker fontSize20px" type="text" placeholder="Add new Subtask">
+                    <input class="subtaskPicker fontSize20px" id="subtasks" type="text" placeholder="Add new Subtask">
                 </div>
             </div>
             <div class="fieldRequiredText">
@@ -96,10 +96,11 @@
                 </div>
             </div>
             <div class="clearCreateButtonsContainer">
-                <button type="button" class="clearButton" onclick="clearForm()">Clear <img src="./assets/img/iconoir_cancel.png"
-                        alt=""></button>
-                <button type="submit" class="createButton" onclick="createTask()">Create Task <img src="./assets/img/check.png"
-                        alt=""></button>
+                <button type="button" class="clearButton" onclick="clearForm()">Clear <img
+                        src="./assets/img/iconoir_cancel.png" alt=""></button>
+                <button type="submit" class="createButton" id="createTaskButton">Create Task <img
+                        src="./assets/img/check.png" alt=""></button>
+
             </div>
         </form>
 
