--- a/board.html
+++ b/board.html
@@ -33,14 +33,14 @@
         </div>
     </div>
 <div class="board-distribution">
-    <div id="toDo" class="card-board">
+    <div id="To-Do" class="card-board">
         <div class="space-between-board height-board">
             <span class="title-board">To do</span>
             <img class="plus-border-board" src="./assets/img/plus-button-board.png">
         </div>
     </div>
 
-    <div id="inProgress" class="card-board">
+    <div id="In Progress" class="card-board">
         <div class="space-between-board height-board">
             <span class="title-board">In progress</span>
             <img class="plus-border-board" src="./assets/img/plus-button-board.png">
@@ -65,7 +65,7 @@
         </div>
     </div>
 
-    <div id="awaitFeedback" class="card-board">
+    <div id="Await feedback" class="card-board">
         <div class="space-between-board height-board">
             <span class="title-board">Await feedback</span>
             <img class="plus-border-board" src="./assets/img/plus-button-board.png">
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <div id="done" class="card-board">
+    <div id="Done" class="card-board">
             <span class="title-board align-center-board height-board">Done</span>
         <div class="tasks-board">
             <div class="technical-task-board">Technical Task</div>
@@ -123,69 +123,6 @@
 </section>
 
 <section id="section-board-overlay" class="section-board-overlay" onclick="initBoard()">
-    <div id="task" class="tasks-board-big">
-        <div class="user-story-board">User Story</div>
-        <div class="name-of-task-board"><span class="name-of-task-board-big">Kochwelt Page & Recipe Recommender</span><p class="name-of-task-board-big-p">Build start page with recipe recommendation...</p></div>
-        <div class="due-date-priority margin-top-16">
-            <span>Due date:</span>
-            <p>10/05/2023</p>
-        </div>
-        <div class="due-date-priority margin-top-16">
-            <span>Priority:</span>
-            <div class="priority-div">
-                <p>Medium</p>
-                <img src="./assets/img/equal-sign-icon.png">
-            </div>
-        </div>
-        <div class="assigned-to margin-top-16">
-            <span>Assigned To:</span>
-            <div class="assigned-to-contacts">
-                <div class="flex-board">
-                    <div class="circle-board-big background-color-green">EM</div>
-                    <span class="contact-name">Emmanuel Mauer</span>
-                </div>
-                <div class="flex-board">
-                    <div class="circle-board-big background-color-darkblue">MB</div>
-                    <span class="contact-name">Marcel Bauer</span>
-                </div>
-                <div class="flex-board">
-                    <div class="circle-board-big background-color-violet">AM</div>
-                    <span class="contact-name">Anton Mayer</span>
-                </div>
-            </div>
-        </div>
-        <div class="assigned-to margin-top-16">
-            <span>Subtasks</span>
-            <div class="flex-board gap-16 padding-left-4">
-                <label class="checkbox-container">
-                    <input type="checkbox">
-                    <span class="checkmark"></span>
-                </label>
-                <p class="checkbox-p">Implement Recipe Recommendation</p>
-                </div>
-            <div class="flex-board gap-16 padding-left-4">
-            <label class="checkbox-container">
-                <input type="checkbox">
-                <span class="checkmark"></span>
-            </label>
-            <p class="checkbox-p">Start Page Layout</p>
-            </div>
-        </div>
-        <div class="last-line margin-top-16">
-            <a href="#" class="flex-board link">
-                <img src="./assets/img/delete.svg">
-                Delete 
-            </a>
-            <div class="vertical-line-board"></div>
-            <a href="#" class="flex-board link">
-                <img src="./assets/img/edit.svg">
-                Edit
-            </a>
-        </div>
-
-
-        
-
 </section>
     
 </body>
