--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,9 @@
     <title>Contacts</title>
     <link rel="stylesheet" href="css/contacts.css">
     <script src="include.js"></script>
-    <script src="./js/templates.js"></script>
     <script src="js/contacts.js"></script>
+    <script src="./js/templates.js"></script>
+    <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
 </head>
