--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./include.js"></script>
+    <script src="./js/templates.js"></script>
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/privacy_policy.css">
     <link rel="shortcut icon" href="assets/img/joinFavIcon.png" type="image/x-icon">
