--- a/help.html
+++ b/help.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/templates/css/templatesStyle.css">
     <link rel="stylesheet" href="./css/help.css">
     <script src="./include.js"></script>
+    <script src="./js/templates.js"></script>
 </head>
 <body onload="includeHTML()">
     <div w3-include-html="./assets/templates/header.html"></div>
@@ -66,6 +67,7 @@
         <h3 class="margin-top-16">Enyoj using Join!</h3>
     </div>
 </section>
+
     
 </body>
 </html>
