--- a/summary.html
+++ b/summary.html
@@ -15,7 +15,7 @@
     <script src="./js/board.js"></script>
     <script src="./js/summary.js"></script>
   </head>
-  <body onload="includeHTML(); showSummaryTasks()">
+  <body onload="includeHTML(); initSummary()">
 
     <div w3-include-html="./assets/templates/header.html"></div>
     <div w3-include-html="./assets/templates/side_menu.html"></div>
