--- a/contacts.html
+++ b/contacts.html
@@ -19,8 +19,8 @@
 
     <div class="main">
         <div class="leftContainer">
-            <div>
-                <button class="addNewContact" id="openButton">Add new contact <img class="personAdd" src="assets/img/person_add.png" alt=""></button>
+            <div class="phoneListAndButton">
+                <button class="addNewContact" id="addNewContactToPhoneList">Add new contact <img class="personAdd" src="assets/img/person_add.png" alt=""></button>
                 <div class="showAllContacts">
 
                     <div id="telefonliste">
