javascript in englisch

--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
                 <button class="addNewContact" id="addNewContactToPhoneList">Add new contact <img class="personAdd" src="assets/img/person_add.png" alt=""></button>
                 <div class="showAllContacts">
 
-                    <div id="telefonliste">
+                    <div id="phonebook">
                         
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                 <img src="assets/img/addedContadctSuccesfully.png">
             </div>
             
-            <div id="zielbereich"></div>
+            <div id="targetArea"></div>
         </div>
 
 
@@ -63,19 +63,19 @@
                                         <div class="closeButton" id="closeButton">
                                             <img class="closeImgAdd" src="assets/img/close.png">
                                         </div>
-                                        <div class="neuerKontaktFormular">
+                                        <div>
                                         <div class="inputs">
-                                            <form id="kontaktForm">
+                                            <form id="contactForm">
                                             <div class="Name">
-                                                <input required class="inputfieldAddContact" id="neuerKontaktName" type="text" placeholder="Name">
+                                                <input required class="inputfieldAddContact" id="newContactName" type="text" placeholder="Name">
                                                 <img src="assets/img/person.png" class="inputfield-icon width22">
                                             </div>
                                             <div class="Name">
-                                                <input required class="inputfieldAddContact" id="neuerKontaktEmail" type="email" placeholder="Email">
+                                                <input required class="inputfieldAddContact" id="newContactEmail" type="email" placeholder="Email">
                                                 <img src="assets/img/mail.png" class="inputfield-icon width22">
                                             </div>
                                             <div class="Name">
-                                                <input required class="inputfieldAddContact" id="neuerKontaktNummer" type="number" placeholder="Phone">
+                                                <input required class="inputfieldAddContact" id="newContactNumber" type="number" placeholder="Phone">
                                                 <img src="assets/img/call.png" class="inputfield-icon">
                                             </div>
                                         </div>
