--- a/contacts.html
+++ b/contacts.html
@@ -26,6 +26,8 @@
                     <div id="phonebook">
                         
                     </div>
+
+                    <img onclick="" class="addContactMobileImg" src="assets/img/addContactMobile.png">
                 </div>
             </div>
         </div>
