updated board with search

--- a/board.html
+++ b/board.html
@@ -20,14 +20,12 @@
     <div w3-include-html="./assets/templates/header.html"></div>
     <div w3-include-html="./assets/templates/side_menu.html"></div>
 
-   
-
 <section class="section-board">
     <div class="space-between-board">
         <h1>Board</h1>
         <div class="flex-board gap-32">
             <div class="input-container">
-                <input class="inputFindTask" required type="text" placeholder="Find Task">
+                <input id="search-input" class="inputFindTask" required type="text" placeholder="Find Task" onkeyup="searchTask()">
                 <img class="inputfield-icon-search" src="./assets/img/search-icon.png">
                 <img class="inputfield-icon-vertical-line" src="./assets/img/vertical-line-board.png">
             </div>
