--- a/board.html
+++ b/board.html
@@ -68,7 +68,7 @@
 
 </section>
 
-<section id="section-board-overlay" class="section-board-overlay" onclick="initBoard()">
+<section id="section-board-overlay" class="section-board-overlay">
 </section>
     
 </body>
