updated edit and delete

--- a/add_task.html
+++ b/add_task.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./include.js"></script>
     <script src="./js/signUp.js"></script>
+    <script src="./register.js"></script>
     <script src="./js/logIn.js"></script>
     <script src="./js/templates.js"></script>
     <script src="./js/add_task.js"></script>
