--- a/board.html
+++ b/board.html
@@ -29,7 +29,7 @@
                 <img class="inputfield-icon-search" src="./assets/img/search-icon.png">
                 <img class="inputfield-icon-vertical-line" src="./assets/img/vertical-line-board.png">
             </div>
-            <button>Add Task <img src="./assets/img/button-plus-board.png"></button>
+            <button onclick="addTaskOnBoard()">Add Task <img src="./assets/img/button-plus-board.png"></button>
         </div>
     </div>
 <div class="board-distribution">
