added addTask on board

--- a/board.html
+++ b/board.html
@@ -24,7 +24,7 @@
     <div class="space-between-board">
         <h1>Board</h1>
         <div class="flex-board gap-32">
-            <div class="input-container">
+            <div class="input-container-board">
                 <input id="search-input" class="inputFindTask" required type="text" placeholder="Find Task" onkeyup="searchTask()">
                 <img class="inputfield-icon-search" src="./assets/img/search-icon.png">
                 <img class="inputfield-icon-vertical-line" src="./assets/img/vertical-line-board.png">
@@ -69,6 +69,9 @@
 </section>
 
 <section id="section-board-overlay" class="section-board-overlay">
+</section>
+
+<section id="overlay-add-task-board" class="overlay-add-task-board">
 </section>
     
 </body>
