--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@
                         
                     </div>
 
-                    <img onclick="" class="addContactMobileImg" src="assets/img/addContactMobile.png">
+                    <img onclick="showMobileAddContact()" class="addContactMobileImg" src="assets/img/addContactMobile.png">
                 </div>
             </div>
         </div>
@@ -54,8 +54,9 @@
             <div class="panel" id="panel">
                 <div class="centerAll">
                     <div class="leftrightContainer">
+                        <img class="exitAddContactMobile" onclick="closeAddContactMobile()" src="assets/img/CloseWhite.png">
                         <div class="addContactImg">
-                            <img src="assets/img/Frame 194.png">
+                            <img id="addContactImgChange" src="assets/img/Frame 194.png">
                         </div>
                         <div class="addContactInputFields">
                             <div class="imgAndInputfields">
@@ -65,7 +66,7 @@
                                         <div class="closeButton" id="closeButton">
                                             <img class="closeImgAdd" src="assets/img/close.png">
                                         </div>
-                                        <div>
+                                        <div class="mobileAdjustments">
                                         <div class="inputs">
                                             <form id="contactForm">
                                             <div class="Name">
